--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <div class="conteudoIcone">
                 <img src="img/icone.jpeg" alt="" class="icone">
             </div>
-            <h1>Yanne Xavier</h1>
+            <h1>Yanne Xavier <span class="material-icons" id="botaoVerificado">verified</span></h1>
             <h2>Psicóloga | CRP 06|172318</h2>
             <div class="conteudoLink">
                 <a type="button" href="https://wa.me/5513997615460" class="link">Agende sua sessão</a>
+                <a type="button" href="https://wa.me/5513997615460" class="link">Instagram profissional</a>
             </div>
 
         </div>
