--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" href="img/icone.jpeg" type="image/x-icon">
+	<link rel="icon" href="img/icone3.jpeg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Yanne Xavier | Psicóloga</title>
 </head>
@@ -13,16 +13,21 @@
     <section class="conteudo">
         <div class="descricao">
             <div class="conteudoIcone">
-                <img src="img/icone.jpeg" alt="" class="icone">
+                <img src="img/icone3.jpeg" alt="" class="icone">
             </div>
-            <h1>Yanne Xavier <span class="material-icons" id="botaoVerificado">verified</span></h1>
-            <h2>Psicóloga | CRP 06|172318</h2>
+            <h1>Yanne Xavier<span class="material-icons" id="botaoVerificado">verified</span></h1>
+            <h2>Psicóloga Clínica - CRP <i>06/172318</i></h2>
             <div class="conteudoLink">
-                <a type="button" href="https://wa.me/5513997615460" class="link">Agende sua sessão</a>
-                <a type="button" href="https://wa.me/5513997615460" class="link">Instagram profissional</a>
+                <a type="button" href="https://wa.me/5513997615460" target="_blank" class="link">Agende sua sessão</a>
+                <!-- <a type="button" href="https://www.instagram.com/psiyanne/" target="_blank" class="link">Instagram profissional</a> -->
+                <a type="button" href="https://psivalentexavier.wixsite.com/psiyanne" target="_blank" class="link">Meu site</a>
             </div>
 
         </div>
     </section>
+
+    
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
