--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="img/icone3.jpeg" alt="" class="icone">
             </div>
             <h1>Yanne Xavier<span class="material-icons" id="botaoVerificado">verified</span></h1>
-            <h2>Psicóloga Clínica - CRP <i>06/172318</i></h2>
+            <h2>Psicóloga Clínica - CRP <spna class="CRP">06/172318</spna></h2>
             <div class="conteudoLink">
                 <a type="button" href="https://wa.me/5513997615460" target="_blank" class="link">Agende sua sessão</a>
                 <!-- <a type="button" href="https://www.instagram.com/psiyanne/" target="_blank" class="link">Instagram profissional</a> -->
