--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 <img src="img/icone3.jpeg" alt="" class="icone">
             </div>
             <h1>Yanne Xavier<span class="material-icons" id="botaoVerificado">verified</span></h1>
-            <h2>Psicóloga Clínica - CRP <spna class="CRP">06/172318</spna></h2>
+            <h2 id="texto1">Psicóloga Clínica</h2>
+            <h2 id="texto2">CRP <span class="CRP">06/172318</span></h2>
             <div class="conteudoLink">
-                <a type="button" href="https://wa.me/5513997615460" target="_blank" class="link">Agende sua sessão</a>
+                <a type="button" href="https://wa.me/5513997615460" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >whatsapp</span> -->Agende sua sessão</a>
                 <!-- <a type="button" href="https://www.instagram.com/psiyanne/" target="_blank" class="link">Instagram profissional</a> -->
-                <a type="button" href="https://psivalentexavier.wixsite.com/psiyanne" target="_blank" class="link">Meu site</a>
+                <a type="button" href="https://psivalentexavier.wixsite.com/psiyanne" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->Meu site</a>
+                <a type="button" href="mailto:Psivalentexavier@gmail.com" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->E-mail</a>
             </div>
 
         </div>
