--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <a type="button" href="https://wa.me/5513997615460" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >whatsapp</span> -->Agende sua sessão</a>
                 <!-- <a type="button" href="https://www.instagram.com/psiyanne/" target="_blank" class="link">Instagram profissional</a> -->
                 <a type="button" href="https://psivalentexavier.wixsite.com/psiyanne" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->Meu site</a>
-                <a type="button" href="mailto:Psivalentexavier@gmail.com" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->E-mail</a>
+                <a type="button" href="mailto:Psivalentexavier@gmail.com?" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->E-mail</a>
+                <a type="button" href="meusDados.html" class="link" id="linkMeusDados"><!-- <span class="material-icons iconeLink" >public</span> -->Não conseguiu acessar?</a>
             </div>
 
         </div>
