--- a/meusDados.html
+++ b/meusDados.html
@@ -12,9 +12,7 @@
 <body>
     <section class="conteudo">
         <div>
-            <a href="index.html">
-                <span class="material-icons botaoVoltar" >arrow_back</span>
-            </a>
+            <a href="index.html"><span class="material-icons botaoVoltar" >arrow_back</span></a>
         </div>
         <div class="descricao" id="descricaoMeusDados">
             <div class="conteudoContato">
