--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <!-- <a type="button" href="https://www.instagram.com/psiyanne/" target="_blank" class="link">Instagram profissional</a> -->
                 <a type="button" href="https://psivalentexavier.wixsite.com/psiyanne" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->Visite meu site</a>
                 <a type="button" href="mailto:Psivalentexavier@gmail.com?" target="_blank" class="link"><!-- <span class="material-icons iconeLink" >public</span> -->Mande um e-mail</a>
+            </div>
+            <div class="conteudoLinkMeusDados">
                 <a type="button" href="meusDados.html" class="linkBotao" id="linkMeusDados"><!-- <span class="material-icons iconeLink" >public</span> -->Não conseguiu acessar?</a>
             </div>
 
